# Route_planner

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_FLOWS.md  CHANGELOG.md  CODEBASE_EXPLORATION.md  CODEBASE_OVERVIEW.md  CONTRIBUTING.md  Daily_Planner.py  EXPLORATION_INDEX.md  EXPLORATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INDUSTRY_DRPP_PIPELINE.md  INDUSTRY_STANDARD_DRPP_ARCHITECTURE.md  INDUSTRY_STANDARD_DRPP_README.md  LICENSE  PIPELINE_GUIDE.md  PRODUCTION_REFACTOR_GUIDE.md  QUICK_CODEBASE_SUMMARY.md  README.md  Route_Planner.py  SECURITY.md  check_dir_fields.py  drpp_pipeline.py  drpp_visualization.py  example_production_usage.py  graph_core.py  improvements_graph_pickling.py  improvements_node_key_alignment.py  improvements_robust_path_reconstruction.py  improvements_unreachable_segments.py  industry_drpp_solver.py  osm_speed_integration.py  parallel_processing_addon.py  parallel_processing_addon_greedy.py  parallel_processing_addon_rfcs.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_production.txt  run_drpp_pipeline.py  (+8 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: IMPLEMENTATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  OPTIMIZATION_INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  REFACTORING_SUMMARY.md  V2_TO_V3_MIGRATION.md  V4_INTEGRATION_SUMMARY.md
drpp_core/: __init__.py  clustering.py  connectivity.py  distance_matrix.py  eulerian_solver.py  exceptions.py  geo.py  greedy_router.py  industry_drpp_solver.py  kml_export.py  logging_config.py  parallel_executor.py  path_reconstruction.py  profiling.py  topology.py  turn_by_turn.py  types.py
legacy/: __init__.py  improvements_dbscan_eps_conversion.py  improvements_memory_efficient_matrix.py  parallel_processing_addon.py  parallel_processing_addon_greedy.py  parallel_processing_addon_greedy_v2.py  parallel_processing_addon_greedy_v3.py  test_optimization.py
tests/: __init__.py  test_clustering.py  test_distance_matrix.py  test_industry_drpp.py  test_path_reconstruction.py
