[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "route-planner-drpp"
version = "4.0.0"
description = "Production-ready Directed Rural Postman Problem (DRPP) solver with advanced optimization and visualization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DillyVee"}
]
keywords = [
    "route-optimization",
    "drpp",
    "rural-postman-problem",
    "graph-algorithms",
    "gis",
    "routing",
    "visualization"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    "networkx>=2.6.0,<4.0.0",
    "lxml>=4.6.0,<6.0.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
# Full application with GUI
gui = [
    "PyQt6>=6.4.0,<7.0.0",
    "folium>=0.12.0,<1.0.0",
    "geopy>=2.2.0,<3.0.0",
    "scikit-learn>=0.24.0,<2.0.0",
    "requests>=2.25.0,<3.0.0",
]

# Visualization only (no GUI)
viz = [
    "folium>=0.12.0,<1.0.0",
    "geopy>=2.2.0,<3.0.0",
]

# Machine learning clustering (optional, enables better clustering)
ml = [
    "scikit-learn>=0.24.0,<2.0.0",
]

# OSM speed integration
osm = [
    "requests>=2.25.0,<3.0.0",
    "geopy>=2.2.0,<3.0.0",
]

# Development tools
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=3.0.0,<6.0.0",
    "black>=22.0.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=0.950,<2.0.0",
    "isort>=5.10.0,<8.0.0",
    "pre-commit>=3.0.0,<4.0.0",
]

# Profiling and performance analysis
profiling = [
    "memory_profiler>=0.60.0",
    "line_profiler>=4.0.0",
]

# All optional dependencies
all = [
    "PyQt6>=6.4.0,<7.0.0",
    "folium>=0.12.0,<1.0.0",
    "geopy>=2.2.0,<3.0.0",
    "scikit-learn>=0.24.0,<2.0.0",
    "requests>=2.25.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/DillyVee/Route_planner"
Repository = "https://github.com/DillyVee/Route_planner"
Documentation = "https://github.com/DillyVee/Route_planner/tree/main/docs"
"Bug Tracker" = "https://github.com/DillyVee/Route_planner/issues"

[project.scripts]
drpp-solve = "run_drpp_pipeline:main"

[tool.setuptools]
packages = ["drpp_core"]

[tool.setuptools.package-data]
drpp_core = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | legacy
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
extend_skip = ["legacy"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
exclude = [
    "legacy/",
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=drpp_core",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["drpp_core"]
omit = [
    "*/tests/*",
    "*/legacy/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "legacy",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict parameter
    "UP006",  # Use builtin types for annotations (typing.List -> list) - Python 3.9+ compatible but not required
    "UP035",  # Import from typing deprecated - Python 3.9+ compatible but not required
    "N806",  # Variable in function should be lowercase - allow X for ML convention
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["S101"]      # Allow assert in tests
"Route_Planner.py" = ["E402", "F401", "B904", "F841", "N806", "B007"]  # GUI file - legacy code
"osm_speed_integration.py" = ["UP006", "F401"]  # Legacy type hints
"drpp_pipeline.py" = ["UP006", "F401"]  # Legacy type hints
"drpp_visualization.py" = ["UP006"]  # Legacy type hints
"run_drpp_pipeline.py" = ["UP006"]  # Legacy code
